# Bar

./: .gitmodules  CMakeLists.txt  README.md  flake.nix  hyprland rules.conf  main.cpp
protocols/: wlr-layer-shell-unstable-v1-client-protocol.h
src/: main.cpp  utils.h
